--- a/deploy/demo-service.yaml
+++ b/deploy/demo-service.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo
+  name: canavas
 spec:
   selector:
-    app: demo
+    app: canavas
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
